# rovio

./: CMakeLists.txt  README.md  package.xml
.github/: FUNDING.yml
.github/workflows/: rovio-ci.yml
cfg/: rovio.info
doc/: CustomSetup.md
include/rovio/: Camera.hpp  FeatureManager.hpp  HealthMonitor.hpp  ImagePyramid.hpp  ImgUpdate.hpp  MultilevelPatchAlignment.hpp  PoseUpdate.hpp  RovioFilter.hpp  RovioNode.hpp  VelocityUpdate.hpp  ZeroVelocityUpdate.hpp  featureTracker.hpp
include/rovio/CoordinateTransform/: FeatureOutput.hpp
launch/: ros2_rovio_node_launch.py  ros2_rovio_node_launch.yaml  ros2_rovio_rosbag_loader_launch.py  ros2_rovio_rosbag_loader_launch.yaml  ros2_rovio_rosbag_node_launch.py
lightweight_filtering/: CMakeLists.txt
lightweight_filtering/include/lightweight_filtering/: Prediction.hpp  Update.hpp
scripts/: rovio_commands.sh
src/: Camera.cpp  feature_tracker_node.cpp  rovio_node.cpp  rovio_rosbag_loader.cpp
srv/: SrvResetToPose.srv
